# osmnx_plots

./: README.md  pyproject.toml  run_osmnx.py
examples/paris_berlin/encoded/: location_ids.tab
src/osmnx_plots/: plot_templates.py
src/osmnx_plots/location_lists/: europe.py  germany.py
src/osmnx_plots/utils/: download.py  tools.py
