[project]
name = "osmnx_plots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.2",
    "matplotlib-scalebar>=0.9.0",
    "matplotlib>=3.10.1",
    "osmnx>=2.0.2",
    "pip>=25.1.1",
    "tqdm>=4.67.1",
    "joblib>=1.5.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["osmnx_plots"]
